--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,10 +1,9 @@
-<table *ngIf="dataLoaded==true" class="table">
-    <thead>
-        <th>Id</th>
-        <th>Araç Markası</th>
-    </thead>
-    <tr *ngFor="let brand of brands" >
-        <td>{{ brand.id }}</td>
-        <td>{{ brand.brandName }}</td>
-    </tr>
-</table>
+
+
+  <ul *ngIf="dataLoaded==true" class="list-group"><h3 style="text-align: center;">Markalar</h3>
+    <li [class]="getAllBrandClass()" routerLink = "/cars">Tüm Markalar</li>
+    <li (click)="setCurrentBrand(brand)"
+    routerLink = "/cars/brand/{{brand.id}}"
+    *ngFor="let brand of brands" 
+    [class]="getCurrentBrandClass(brand)">{{brand.brandName}}</li>
+</ul>
