--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,21 +1,45 @@
+<h4 style="text-align: center;"><b>CAR LIST</b></h4>
 <div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+</div>
+
+<div class="row" *ngIf="dataLoaded==true">
+    <div *ngFor="let car of cars" class="card" style="width: 18rem;">
+        <img src="{{imageBasePath}}{{car.imagePath}}" class="card-img-top" width="320" height="200" alt={{car.description}}>
+        <div class="card-body">
+          <!-- <h5 class="card-title d-flex justify-content-center">{{car.carName}}</h5> -->
+          <p class="card-text d-flex justify-content-center">{{car.description}}</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Brand: {{car.brandName}}</li>
+          <li class="list-group-item">Color: {{car.colorName}}</li>
+          <li class="list-group-item">Model Year: {{car.modelYear}}</li>
+          <li class="list-group-item">Daily Price: {{car.description}}</li>
+        </ul>
+        <div class="card-body">
+            <section style="float:left">
+                <button routerLink="/car/details/{{car.id}}" type="button" class="btn btn-primary">Details</button>
+              </section>
+              <section style="float: right">
+                <button type="button" class="btn btn-primary">Rent</button>
+              </section>
+        </div>
+      </div>
+</div>
+<!-- <div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
 <table *ngIf="dataLoaded==true" class="table">
     <thead>
         <th>Id</th>
-        <th>Marka</th>
-        <th>Renk</th>
         <th>Model Yılı</th>
         <th>Günlük Ücreti</th>
         <th>Açıklama</th>
     </thead>
     <tr *ngFor="let car of cars" >
-        <td>{{ car.carId }}</td>
-        <td>{{ car.brandName }}</td>
-        <td>{{ car.colorName }}</td>
+        <td>{{ car.id }}</td>
         <td>{{ car.modelYear }}</td>
         <td>{{ car.dailyPrice }}</td>
         <td>{{ car.description }}</td>
     </tr>
-</table>
+</table> -->
