--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,10 +1,14 @@
-<table *ngIf="dataLoaded==true" class="table">
-    <thead>
-        <th>Id</th>
-        <th>Renk</th>
-    </thead>
-    <tr *ngFor="let color of colors" >
-        <td>{{ color.id }}</td>
-        <td>{{ color.colorName }}</td>
-    </tr>
-</table>
+<!-- <thead>
+    <th>Renkler</th>
+  </thead>
+  <ul class="list-group">
+      <li (click)="setCurrentColor(color)" routerLink="cars/color/{{color.id}}" *ngFor="let color of colors" class="list-group-item">{{color.colorName}}</li>
+    </ul> -->
+
+<ul *ngIf="dataLoaded==true" class="list-group"><h3 style="text-align: center;">Renkler</h3>
+    <li [class]="getAllColorClass()" routerLink = "/cars">Tüm Renkler</li>
+    <li (click)="setCurrentColor(color)"
+    routerLink = "/cars/color/{{color.id}}"
+    *ngFor="let color of colors" 
+    [class]="getCurrentColorClass(color)">{{color.colorName}}</li>
+</ul>
