--- a/src/app/components/car-detail/car-detail.component.html
+++ b/src/app/components/car-detail/car-detail.component.html
@@ -1,16 +1,19 @@
+
 <h3 class="d-flex justify-content-center">CAR DETAILS</h3>
 
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button *ngFor="let image of carImages;let i = index" type="button" data-bs-target="#carouselExampleIndicators" attr.data-bs-slide-to="{{i}}" [class]="getButtonClass(image)" aria-current="true" aria-label="Slide 1"></button>
-      <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" [class]="getButtonClass(image)" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" [class]="getButtonClass(image)" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" [class]="getButtonClass(image)" aria-label="Slide 3"></button> -->
+      
     </div>
     <div class="carousel-inner">
-      <div *ngFor="let image of carImages" [class]="getCurrentImageClass(image)">
-        <img src="{{imageBasePath}}{{image.imagePath}}" class="d-block w-100" width="640" height="480"  alt="Image">
-      </div>
+      <span *ngFor="let carDetail of cars">
+        <div *ngFor="let img of carDetail.imagePaths let i=index"
+             [ngClass]="setClassName(i)">
+          <img class="d-block w-100" src="{{img.imagePath}}"  class="card-img" width="320" height="200">
+  
+        </div>
+      </span>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -21,7 +24,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-<table *ngIf="dataLoaded==true" class="table table-striped table-hover table-bordered">
+<table  class="table table-striped table-hover table-bordered">
     <thead>
         <tr>
             <th>Brand</th>
@@ -44,27 +47,4 @@
     
         </tr>
     </tbody>
-    <!-- <div class="row">
-  
-    <table class="table">
-      <thead>
-        <th>Id</th>
-        <th>Marka</th>
-        <th>Renk</th>
-        <th>Foto Tarihi</th>
-        <th>MOdel Yılı</th>
-        <th>Günlük Ücreti</th>
-        <th>Açıklama</th>
-      </thead>
-      <tr *ngFor="let car of cars">
-        <td>{{ car.id }}</td>
-        <td>{{ car.brandName }}</td>
-        <td>{{ car.colorName }}</td>
-        <td>{{ car.date }}</td>
-        <td>{{ car.modelYear }}</td>
-        <td>{{ car.dailyPrice }}</td>
-        <td>{{ car.description }}</td>
-      </tr>
-    </table>
-
-</div> -->
+    
